--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -10,7 +10,7 @@
         <viewmodel:BoardViewModel/>
     </Window.DataContext>
     <Grid>
-        <ItemsControl ItemsSource="{Binding Circles}" Width="{Binding WindowWidth}" Height="{Binding WindowHeight}" Margin="25,10,25,0" VerticalAlignment="Top">
+        <ItemsControl ItemsSource="{Binding Balls}" Width="{Binding WindowWidth}" Height="{Binding WindowHeight}" Margin="25,10,25,0" VerticalAlignment="Top">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <Canvas Background="#FFBBBBBB"/>
@@ -24,7 +24,7 @@
             </ItemsControl.ItemContainerStyle>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Path Fill="{Binding Color}">
+                    <Path Fill="#FA8072">
                         <Path.Data>
                             <EllipseGeometry RadiusX="{Binding Radius}" RadiusY="{Binding Radius}"/>
                         </Path.Data>
