--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -35,6 +35,7 @@
         <Grid Panel.ZIndex="2" HorizontalAlignment="Right" Margin="800,0,0,25">
             <TextBlock Text="Piłki:" Margin="0,480,0,-2"/>
             <TextBox Text="{Binding Count}"  Margin="0,500,40,-2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="208"/>
+            <Button Command="{Binding ChangeCommand}" Content="Rozszerzenie loggera" Margin="0, 10, 30, 50" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200"/>
             <Button Command="{Binding StartCommand}" Content="Start" Margin="0,560,30,50" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100"/>
             <Button Command="{Binding StopCommand}" Content="Stop" Margin="0,400,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100"/>
         </Grid>
